# edgesnap

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.sh
src/: cv.rs  lib.rs
web/: index.html  main.mjs  worker.mjs
