[package]
name = "edgesnap"
version = "0.1.0"
edition = "2024"
description = "In-browser document / ID-card edge detection and auto-capture (Rust -> WASM)"
license = "MIT"

[lib]
# cdylib -> wasm artifact for the browser; rlib -> so `cargo test` can run the
# pure-Rust CV core natively, with no browser involved.
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
